# mutation-testing

./: README.md  claude.md  md-extract.sh  pyproject.toml
.claude/skills/: markdown-extraction.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
doc/: ast_parsing_guide.md
docs/: pytest_mutation_plan.md
example/: mutations.yaml  pyproject.toml  run_mutations.py
example/src/: calculator.py
example/tests/: test_calculator.py
mutation_testing/: __init__.py  config.py  core.py  coverage.py  runner.py
