[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutation-testing"
version = "0.1.0"
description = "Runtime mutation injection for Python tests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
