[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutation-testing"
dynamic = ["version"]
description = "Runtime mutation injection for Python tests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "YeahWick" },
]
keywords = ["mutation-testing", "testing", "ast", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/YeahWick/mutation-testing"
Repository = "https://github.com/YeahWick/mutation-testing"
Issues = "https://github.com/YeahWick/mutation-testing/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.version]
path = "mutation_testing/__init__.py"
